# Wriple

./: .gitignore  README.md  main.js  package.json  preload.js  pyproject.toml  run.py  sdkconfig
_components/: csi_component.h  radar_component.h  time_component.h
app/: app.py  index.html  main.py  requirements.txt
app/api/: routes.py
app/config/: settings.py
app/core/: csi_processor.py  file_manager.py  model_manager.py  network_manager.py  rdm_processor.py
app/model/: convlstm_model.keras  rdm_thresholds.json  scaler_pca_pipeline.pkl  wriple_v1.6.pkl
app/notebook/: 3d_plot.ipynb  evaluate.ipynb  train.ipynb  training.ipynb  visualize.ipynb
app/settings/: settings.json
app/static/css/: styles.css
app/static/images/: icon.icns
app/static/js/: constants.js  main.js  ui.js
app/static/js/visualizers/: heatmap.js  (+2 more)
app/static/scripts/: scripts.js
app/static/styles/: styles.css
app/templates/: index.html
app/test/: performance.py  timer.py
app/utils/: logger.py  packet_parser.py  perf_timer.py  system_command.py
firmware/: CMakeLists.txt  sdkconfig
firmware/_components/: csi_component.h  ld2420_component.h  mmwave_component.h  radar_component.h  rd03d_component.h  sta_component.h
firmware/components/: csi.h  rdm.h  server.h  station.h
firmware/main/: main.cc
main/: main.cc
model/: convlstm_model.keras  rf_model.pkl  wriple_v2-lg.pkl  wriple_v2-pca.pkl
setting/: setting.json  settings.json
webapp/: app.py  requirements.txt  run.py
webapp/app/: main.py
webapp/app/api/: routes.py  validators.py
webapp/app/config/: settings.json  settings.py
webapp/app/core/: csi_processor.py  data_recorder.py  file_manager.py  ml_predictor.py  model_manager.py  network_manager.py  rdm_processor.py  visualizer.py
webapp/app/templates/: index.html
webapp/app/utils/: logger.py  model_loader.py  packet_parser.py
webapp/static/css/: styles.css
webapp/static/js/: script.js
webapp/templates/: index.html
(+18 files in other folders)
