[project]
name = "WRIPLE"
version = "1.0.0"
description = "A human presence detection system using Wi-Fi CSI and mmWave RDM"
requires-python = ">=3.13.7"

dependencies = [
    "flask-cors==6.0.1",
    "waitress==3.0.2",
    "numpy==2.3.2",
    "pandas==2.3.2",
    "scipy==1.16.1",
    "joblib==1.5.2",
    "tensorflow-cpu>=2.20.0",
    "scikit-learn>=1.7.2",
]
